--- a/templates/index.html
+++ b/templates/index.html
@@ -1138,6 +1138,7 @@
                 margin: 0;
                 color: var(--text);
                 opacity: 0.8;
+                word-break: break-all;
             }
 
             .results-details {
