--- a/templates/404.html
+++ b/templates/404.html
@@ -362,15 +362,15 @@
                     }
                 }
 
-                ['input', 'change', 'autocomplete'].forEach(event => {
+                ['input', 'change', 'autocomplete'].forEach((event) => {
                     searchInput.addEventListener(event, updateSearchButtonVisibility);
                 });
 
-                searchForm.addEventListener('submit', event => {
+                searchForm.addEventListener('submit', (event) => {
                     event.preventDefault();
                 });
 
-                searchInput.addEventListener('animationstart', e => {
+                searchInput.addEventListener('animationstart', (e) => {
                     if (e.animationName.indexOf('autofill') !== -1) updateSearchButtonVisibility();
                 });
 
@@ -378,7 +378,7 @@
 
                 searchButton.addEventListener('click', handleSearch);
 
-                searchInput.addEventListener('keypress', e => {
+                searchInput.addEventListener('keypress', (e) => {
                     if (e.key === 'Enter' && searchInput.value.trim()) {
                         handleSearch();
                     }
